// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Table HeadCell should be able to "center" align  1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: default;
}

.c0 .c1:hover .c3 {
  color: #1A6BF0;
}

.c0 .c1:hover .sc-AykKC * {
  fill: #1A6BF0;
}

.c0 .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #435465;
}

.c0 .sc-AykKC {
  width: 2.4rem;
  cursor: pointer;
  padding-left: 1rem;
}

.c0 .sc-AykKC * {
  fill: #435465;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
            >
              Column 1
            </h5>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should be able to "left" align  1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: default;
}

.c0 .c1:hover .c3 {
  color: #1A6BF0;
}

.c0 .c1:hover .sc-AykKC * {
  fill: #1A6BF0;
}

.c0 .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #435465;
}

.c0 .sc-AykKC {
  width: 2.4rem;
  cursor: pointer;
  padding-left: 1rem;
}

.c0 .sc-AykKC * {
  fill: #435465;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
            >
              Column 1
            </h5>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should be able to "right" align  1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: default;
}

.c0 .c1:hover .c3 {
  color: #1A6BF0;
}

.c0 .c1:hover .sc-AykKC * {
  fill: #1A6BF0;
}

.c0 .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #435465;
}

.c0 .sc-AykKC {
  width: 2.4rem;
  cursor: pointer;
  padding-left: 1rem;
}

.c0 .sc-AykKC * {
  fill: #435465;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
            >
              Column 1
            </h5>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should call onSortChange with asc order when clicked on sorting icon 1`] = `
.c6 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c6 * {
  fill-opacity: 1;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: #005AEE;
  height: 0.2rem;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: pointer;
}

.c0 .c1:hover .c3 {
  color: #1A6BF0;
}

.c0 .c1:hover .c5 * {
  fill: #1A6BF0;
}

.c0 .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #005AEE;
}

.c0 .c5 {
  width: 2.4rem;
  cursor: pointer;
  padding-left: 1rem;
}

.c0 .c5 * {
  fill: #005AEE;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
            >
              Demo
            </h5>
            <svg
              class="c5 c6"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.706 12.586l2.59-2.59a.996.996 0 0 1 1.41 0l2.59 2.59c.63.63.18 1.71-.71 1.71h-5.18c-.89 0-1.33-1.08-.7-1.71z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should call onSortChange with desc order when clicked on sorting icon 1`] = `
.c6 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c6 * {
  fill-opacity: 1;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: #005AEE;
  height: 0.2rem;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: pointer;
}

.c0 .c1:hover .c3 {
  color: #1A6BF0;
}

.c0 .c1:hover .c5 * {
  fill: #1A6BF0;
}

.c0 .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #005AEE;
}

.c0 .c5 {
  width: 2.4rem;
  cursor: pointer;
  padding-left: 1rem;
}

.c0 .c5 * {
  fill: #005AEE;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
            >
              Demo
            </h5>
            <svg
              class="c5 c6"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.706 11.414l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71h-5.18c-.89 0-1.33 1.08-.7 1.71z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should render properly with dark background and dropdown icon by default 1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: default;
}

.c0 .c1:hover .c3 {
  color: #1A6BF0;
}

.c0 .c1:hover .sc-AykKC * {
  fill: #1A6BF0;
}

.c0 .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #435465;
}

.c0 .sc-AykKC {
  width: 2.4rem;
  cursor: pointer;
  padding-left: 1rem;
}

.c0 .sc-AykKC * {
  fill: #435465;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
            >
              Demo
            </h5>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should render properly with hover state 1`] = `
.c6 {
  font-size: 1.6rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c6 * {
  fill-opacity: 1;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: pointer;
}

.c0 .c1:hover .c3 {
  color: #1A6BF0;
}

.c0 .c1:hover .c5 * {
  fill: #1A6BF0;
}

.c0 .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #607890;
}

.c0 .c5 {
  width: 2.4rem;
  cursor: pointer;
  padding-left: 1rem;
}

.c0 .c5 * {
  fill: #607890;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
            >
              Demo
            </h5>
            <svg
              class="c5 c6"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.208 5.03a1 1 0 0 1 1.584 0l3.165 4.11a1 1 0 0 1-.793 1.61H8.836a1 1 0 0 1-.793-1.61l3.165-4.11zM12.792 18.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should render properly with light background and dropdown icon by default 1`] = `
.c6 {
  font-size: 1.6rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c6 * {
  fill-opacity: 1;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: 100%;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: pointer;
}

.c0 .c1:hover .c3 {
  color: #1A6BF0;
}

.c0 .c1:hover .c5 * {
  fill: #1A6BF0;
}

.c0 .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline;
  color: #607890;
}

.c0 .c5 {
  width: 2.4rem;
  cursor: pointer;
  padding-left: 1rem;
}

.c0 .c5 * {
  fill: #607890;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
            >
              Demo
            </h5>
            <svg
              class="c5 c6"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.208 5.03a1 1 0 0 1 1.584 0l3.165 4.11a1 1 0 0 1-.793 1.61H8.836a1 1 0 0 1-.793-1.61l3.165-4.11zM12.792 18.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
